fix(security): Code is rewritten to replace deprecated new URL(String) constructor usage.